fix: hide modeler button on mobile

--- a/src/app/components/shop/shop.component.scss
+++ b/src/app/components/shop/shop.component.scss
@@ -119,7 +119,7 @@
 
       &_absolute {
         position: absolute;
-        top: 8px;
+        top: 10px;
         right: 15px;
 
         margin: 0;
@@ -285,10 +285,10 @@
   }
 }
 
-@media screen and (max-width: map-get($breakpoints, mobile-portrait) - 30px) {
+@media screen and (max-width: map-get($breakpoints, mobile-portrait)) {
   .shop {
     &__features-toolbar {
-      white-space: unset;
+			white-space: unset;
     }
 
     &__album-title-container::after {
@@ -299,12 +299,17 @@
 			background-color: transparent;
 		}
 
+		&__album-title-container {
+			justify-content: flex-start;
+		}
+
     &__button {
       &_cart {
         margin-left: 0;
       }
 
       &_modeler {
+				display: none;
         margin-right: 0;
       }
     }
